# ffws-ml

./: .gitignore  Makefile  README.md  app.py  docker-compose.yml  payload.json  pyproject.toml  requirements-torch.txt  requirements.txt  start_training.py  wsgi.py
TimeSeriesClass/: __init__.py
api/: main.py  predictor_state.py  routes.py  schemas.py
api/routes/: health.py  predict.py
config/: __init__.py  settings.py
configs/: lstm_model.yaml  serving.yaml  sklearn_model.yaml  training.yaml
database/: db_utils.py
docker/: Dockerfile.api  Dockerfile.training
docs/: ARCHITECTURE.md
ml/: __init__.py  data.py  models.py  preprocessing.py  training.py
models/sklearn/: gradient_boosting_h2.pkl  gradient_boosting_h3.pkl  lasso_alpha001_h4.pkl  lasso_alpha001_h5.pkl  scaler.pkl  xgboost_h1.pkl
research/: 01_eda_dhompo.ipynb  02_modeling_dhompo.ipynb  03_lstm_dhompo.ipynb  04_combined_training.ipynb  create_04_combined_training.py  eda_helpers.py
scripts/: export_pred_vs_truth_combined.py  generate_best_per_experiment.py  generate_experiment_tables.py  generate_training_report.py
src/dhompo/: __init__.py  (+1 more)
tests/: conftest.py  test_adaptive.py  test_api.py  test_file_predictor.py  test_quality.py  test_synthesis.py  test_tier_a_adaptive_predictor.py  test_two_tier.py
training/: diagnose_regime_errors.py  evaluate.py  flood_event_cv.py  run_delta_experiment.py  run_experiments.py  run_peak_weighted_experiment.py  run_smoothing_experiment.py  run_tier_a_adaptive.py  train_pytorch.py  train_sklearn.py  train_stacking.py  tune_optuna.py  validate_data.py
(+42 files in other folders)
